--- a/templates/login.html
+++ b/templates/login.html
@@ -30,6 +30,17 @@
             </div>
             <div class="medium-8 columns">
     </div>
-            <img src="../static/images/swInfographic.png" alt="intro infographic"/>
+        <div class="large-6 columns loginCTA call">
+            <img class="large-3 columns" src="../static/images/peopleicon.png">
+            <p class="large-9 columns ctaTxt">Connect with friends so you can keep track of each others progress in the latest shows.</p>
+        </div>
+        <div class="large-6 columns loginCTA call">
+            <img class="large-3 columns" src="../static/images/trophy.png">
+            <p class="large-9 columns ctaTxt">Collect badges to show off your level of dedication.</p>
+        </div>
+        <div class="large-6 columns loginCTA call">
+            <img class="large-3 columns mute" src="../static/images/mute.png">
+            <p id="muteTxt" class="large-8 columns ctaTxt">Most importantly, help prevent spoilers for you and your friends!</p>
+        </div>
     </div>
 
