--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -11,5 +11,8 @@
     <input id="searchSubmit" class="submit" type="submit" value="Submit">
 </form>
 
-
+<div class="large-6 columns">
+    <img class="large-3 columns call" src="../static/images/tv.png">
+    <p class="large-9 columns call">Use this form to add a new show to the list of shows that you follow.</p>
+</div>
 
