--- a/templates/shows.html
+++ b/templates/shows.html
@@ -2,7 +2,7 @@
 
 <h3 class="header">Update Shows</h3>
 
-<form class="medium-12 columns updateShowForm" action="/updateShow" method="post">
+<form class="medium-6 columns updateShowForm" action="/updateShow" method="post">
     <h4>Show Title:</h4>
     <input name="title">
     <h4>Season:</h4>
@@ -12,11 +12,17 @@
     <br>
     <input id="update" class="submit" type="submit" value="Submit">
 
+    <div class="medium-6-columns call">
+    <img class="large-1 columns call" src="../static/images/exclamationRed.png">
+    <p class="large-11 columns call">Remember to only use this form to update shows you are already watching.</p>
+</div>
+
 </form>
 
 
 
-<h3 class="header">Last Episodes Watched:</h3>
+
+<h3 class="large-12 columns header">Last Episodes Watched:</h3>
 
 
 
