--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
     <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
 </head>
-<body>
+<body style="background-image:url('../static/images/wall.png')">
 <nav>
              <ul class="topnav">
            <li><a class="header" id="sw" href="/login">Spoiler Watch</a></li>
