--- a/static/styles.css
+++ b/static/styles.css
@@ -14,6 +14,7 @@ body{
     background-repeat: repeat;
 }
 
+
 /* Nav Stylings */
 
 ul.topnav {
@@ -90,14 +91,7 @@ ul.topnav li a {
     color: #617799;
 }
 
-.badgeForm{
-    background-color: #c7c7c7;
-    border-radius: 6px;
-    padding:30px;
-    margin: 10px;
-    height: 90%;
-    width: 98%;
-}
+
 
 
 
@@ -142,6 +136,9 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 10px;
     height: 20%;
     width: 50%;
+    -webkit-box-shadow: 0 8px 6px -6px black;
+    -moz-box-shadow: 0 8px 6px -6px black;
+    box-shadow: 0 8px 6px -6px black;
 }
 
 
@@ -165,47 +162,6 @@ h4{
   background-color: #617799;
 }
 
-
-.badge {
- margin: 10px;
- position: relative;
- background: #ffa600;
- height: 180px;
- width: 180px;
- -moz-border-radius:    120px;
- -webkit-border-radius: 120px;
- border-radius:         120px;
-}
-
-.badge:before,
-.badge:after {
-  content: '';
-  position: absolute;
-  border-bottom: 140px solid #ffa600;
-  border-left: 80px solid transparent;
-  border-right: 80px solid transparent;
-  top: 140px;
-  left: -10px;
-  -webkit-transform: rotate(-140deg);
-  -moz-transform:    rotate(-140deg);
-  -ms-transform:     rotate(-140deg);
-  -o-transform:      rotate(-140deg);
-}
-
-.badge:after {
-  left: auto;
-  right: -10px;
-  -webkit-transform: rotate(140deg);
-  -moz-transform:    rotate(140deg);
-  -ms-transform:     rotate(140deg);
-  -o-transform:      rotate(140deg);
-}
-
-.badgeText{
-  color: black;
-  padding: 25px;
-  font-size: 15px;
-}
 
 
 /* Add Shows Form */
@@ -250,6 +206,9 @@ h4{
     padding:30px;
     margin: 10px;
     height: 25%;
+    -webkit-box-shadow: 0 8px 6px -6px black;
+    -moz-box-shadow: 0 8px 6px -6px black;
+    box-shadow: 0 8px 6px -6px black;
 }
 
 /* Displaying Friend Data */
@@ -265,6 +224,42 @@ h4{
     display: inline;
     text-align: center;
 }
+
+/* Badge Stylings */
+
+
+.badgeText{
+  color: white;
+  padding: 25px;
+  font-size: 18px;
+  text-align: center;
+  position: absolute;
+  top: 70px;
+  left: 65px;
+  width: 65%;
+}
+
+.badgeForm{
+    background-color: #c7c7c7;
+    border-radius: 6px;
+    padding:30px;
+    margin: 10px;
+    height: 90%;
+    width: 98%;
+    -webkit-box-shadow: 0 8px 6px -6px black;
+    -moz-box-shadow: 0 8px 6px -6px black;
+    box-shadow: 0 8px 6px -6px black;
+}
+
+.iBadge{
+    position: relative;
+
+}
+
+#badgeText{
+
+}
+
 
 
 /* restyling the container */
