--- a/templates/allBadges.html
+++ b/templates/allBadges.html
@@ -1,9 +1,12 @@
 {%include 'nav.html'%}
-
+<!-- Icon made by http://www.flaticon.com/authors/freepik from www.flaticon.com -->
 
 <h3 class="header">All Badges</h3>
 {%for badge in badgeData %}
-<div class="medium-12 columns badge"><p class="badgeText">{{badge[0]}}</p></div>
+<div class="large-3 columns iBadge">
+    <img src="../static/images/award.png">
+    <p class="badgeText">{{badge[0]}}</p>
+</div>
 
 
 
