--- a/templates/friendData.html
+++ b/templates/friendData.html
@@ -14,7 +14,10 @@
 <h3 class="medium-12 columns header">All Badges</h3>
 <br>
 {%for badge in badgeData %}
-<div class="medium-12 columns badge"><p class="badgeText">{{badge[0]}}</p></div>
+<div class="large-3 columns iBadge">
+    <img src="../static/images/award.png">
+    <p class="badgeText">{{badge[0]}}</p>
+</div>
 
 
 
