--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -1,18 +1,9 @@
 {%include 'nav.html'%}
-<h3 class="header">Add A Show</h3>
 <form class="medium-2 columns addShow" action="/parseJSON" method="post">
-    <h4>Show Title:</h4>
-    <input class="addInput" name="title">
-    <h4>Season:</h4>
-    <input class="addInput" name="season">
-    <h4>Episode #:</h4>
-    <input class="addInput" name="episode">
+    <input placeholder="Show Title" class="addInput" name="title">
+    <input placeholder="Season" class="addInput" name="season">
+    <input placeholder="Episode #" class="addInput" name="episode">
     <br>
-    <input id="searchSubmit" class="submit" type="submit" value="Submit">
+    <input id="searchSubmit" class="submit" type="submit" value="Add Show">
 </form>
-
-<div class="large-6 columns">
-    <img class="large-3 columns call" src="../static/images/tv.png">
-    <p class="large-9 columns call">Use this form to add a new show to the list of shows that you follow.</p>
-</div>
 
