--- a/templates/badges.html
+++ b/templates/badges.html
@@ -33,7 +33,8 @@
     <p class="showContent">Episode: {{show[3]}}</p>
     <p class="showContent">Max Ep: {{show[4]}}</p>
     <p>Plot Summary: {{show[5]}}</p>
-    <p>Air Date: {{show[6]}}</p>
+    <img src="http://img.omdbapi.com/?i=tt1480055&h=350&apikey=e24fb313">
+    <p>Air Date: {{show[7]}}</p>
 
     <h5>Progress in Season:</h5>
     <div class="radial-progress" data-progress="0">
@@ -61,15 +62,15 @@
 
 {%endfor%}
 
-<h3 class="header">Badges</h3>
-{%for badge in badgeData %}
-<div class="large-3 columns iBadge">
-    <img src="../static/images/award.png">
-    <p class="badgeText">{{badge[1]}}</p>
-</div>
+<!--<h3 class="header">Badges</h3>-->
+<!--{%for badge in badgeData %}-->
+<!--<div class="large-3 columns iBadge">-->
+    <!--<img src="../static/images/award.png">-->
+    <!--<p class="badgeText">{{badge[1]}}</p>-->
+<!--</div>-->
 
 
-{%endfor%}
+<!--{%endfor%}-->
 
 
 
