--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Spoiler Watch Welcome</title>
+    <title>Welcome, Watchers</title>
     <link href="../../static/styles.css" rel="stylesheet" >
     <link href='http://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
@@ -12,7 +12,7 @@
 <body style="background-color: black; font-family: 'Walkway Semibold';">
         <nav>
              <ul class="topnav">
-           <h1><a class="header" id="sw" href="/login">Watcher</a></h1>
+           <h1><a class="header" id="sw" href="/login">Watchers</a></h1>
         </ul>
 
         </nav>
@@ -24,9 +24,9 @@
             </form>
             <div class="large-9 columns">
                 <img class="loginPoster" id="poster1" src="http://img.omdbapi.com/?i=tt0903747&h=350&apikey=e24fb313">
-                <p id="poster1Txt">Watcher lets TV lovers keep track of their shows.</p>
-                <img class="loginPoster" id="poster2" src="http://img.omdbapi.com/?i=tt0460649&h=350&apikey=e24fb313">
-                <p id="poster2Txt">Connect with friends to see what they are watching.</p>
+                <p id="poster1Txt">Join a fraternity of TV lovers.</p>
+                <img class="loginPoster" id="poster2" src="http://img.omdbapi.com/?i=tt2891574&h=350&apikey=e24fb313">
+                <p id="poster2Txt">Keep track of all your favorite shows.</p>
                 <img class="loginPoster" id="poster3" src="http://img.omdbapi.com/?i=tt0773262&h=350&apikey=e24fb313">
                 <p id="poster3Txt">Earn badges and learn about your favorite shows.</p>
                 <a id="joinTxt" href="/newUser">Become a Watcher now!</a>
