--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
     <script src="js/main.js"></script>
 </head>
-<body style="background-color: black; font-family: 'Walkway Semibold';">
+<body style="background-color: #0d0d0d; font-family: 'Walkway Semibold';">
         <nav>
              <ul class="topnav">
            <h1><a class="header" id="sw" href="/login">Watchers</a></h1>
