--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -109,15 +109,15 @@
     <input id="searchSubmit" class="submit" type="submit" value="Add Show">
 </form>
 
-<div class="large-6 columns">
-    <h3 class="header infoPosterText">Preacher premiers May 22nd on AMC!</h3>
-    <img class="infoPoster" src="../static/images/preacher.jpg">
+<div class="large-7 columns">
+    <h3 class="header infoPosterText">A Vertigo Comics original comes to TV!</h3>
+    <img class="infoPoster" src="../static/images/preacher2.jpg">
 </div>
 
-<div class="large-6 columns">
-    <h3 class="header infoPosterText">Season 6 of Game of Thrones is here!</h3>
-    <img class="infoPoster" src="../static/images/got.jpg">
-</div>
+<!--<div class="large-7 columns">-->
+    <!--<h3 class="header infoPosterText">Season 6 of Game of Thrones is here!</h3>-->
+    <!--<img class="infoPoster" src="../static/images/got.jpg">-->
+<!--</div>-->
 
 
 {%include 'footer.html'%}
