--- a/templates/shows.html
+++ b/templates/shows.html
@@ -34,7 +34,7 @@
 
 
 
-  <form class="medium-3 columns bubble" action="/badges" method="post">
+  <form class="large-4 columns bubble" action="/showInfo" method="post">
     <br>
     <h4 class="showContent">{{show[0]}}</h4>
     <h5 class="showContent" >"{{show[1]}}"</h5>
