Poster in Show Info, styling fixes

--- a/templates/addedNotification.html
+++ b/templates/addedNotification.html
@@ -7,6 +7,7 @@
 
     <p class="showContent">Episode: {{data['Episode']}}</p>
 
-    <p class="showContent" style="font-weight:bold;">Has been added to the list of series you follow. You can view your shows in the My Shows section or by clicking <a href="/shows">here</a></p>
+    <p class="showContent">This show has been added to the list of series you follow.</p>
 
+    <p class="showContent">You can view your shows in the My Shows section or by clicking <a href="/shows">here</a></p>
 </div>
