--- a/templates/shows.html
+++ b/templates/shows.html
@@ -46,7 +46,7 @@
       <input name="currentEpisode" style="display:none;" value="{{show[3]}}">
       <input name="lastEpisode" style="display:none;" value="{{show[4]}}">
     <input name="random" style="display:none;" value="{{show[0]}}">
-    <input class="submit" type="submit" value="View Show Info">
+    <input id="showInfoButton" class="submit" type="submit" value="View Show Info">
 </form>
 
 
