--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -11,6 +11,7 @@
     <h5 class="showContent" style="margin-top:10px;font-weight:bold;">"{{show[1]}}"</h5>
     <p class="showContent" style="margin-top:10px;font-weight:bold;">Season: {{show[2]}}</p>
     <p class="showContent" style="margin-top:10px;font-weight:bold;">Episode: {{show[3]}}</p>
-</form>
 
+</form>
+</div>
 {%endfor%}
