--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,6 @@ body{
 .header{
     color: white;
     font-family: 'Keep Calm Medium';
-    margin: 1%;
 }
 
 p, input, a{
@@ -140,7 +139,7 @@ ul.topnav li a:hover{
     border: 1px solid #cacaca;
     color: whitesmoke;
     padding: 4px;
-    width: 80%;
+    width: 50%;
     border: none;
     height: 40px;
     border-radius: 2px;
@@ -326,6 +325,14 @@ span.ui-helper-hidden-accessible{
 
 }
 
+#showInfoButton{
+    margin-left: 25%;
+}
+
+/* Show Info Page */
+
+
+
 /* Display Friends */
 
 .friendBubble{
@@ -337,6 +344,14 @@ span.ui-helper-hidden-accessible{
     -webkit-box-shadow: 0 8px 6px -6px black;
     -moz-box-shadow: 0 8px 6px -6px black;
     box-shadow: 0 8px 6px -6px black;
+}
+
+#addFriendButton{
+        display: inline;
+    }
+
+#findFriendInput{
+    display: inline;
 }
 
 /* Displaying Friend Data */
@@ -370,8 +385,6 @@ span.ui-helper-hidden-accessible{
 .badgeForm{
     padding:30px;
     margin: 10px;
-    height: 90%;
-    width: 98%;
     -webkit-box-shadow: 0 8px 6px -6px black;
     -moz-box-shadow: 0 8px 6px -6px black;
     box-shadow: 0 8px 6px -6px black;
@@ -379,7 +392,6 @@ span.ui-helper-hidden-accessible{
 
 .iBadge{
     position: relative;
-
 }
 
 #badgeText{
