--- a/templates/newUserWelcome.html
+++ b/templates/newUserWelcome.html
@@ -2,4 +2,6 @@
 
 <h2 class="header">Welcome to the Watchers</h2>
 
-<p>Return to the  </p>
+<p>Return to the <a href="/login">login screen</a> </p>
+
+{%include 'footer.html'%}
