--- a/templates/nav.html
+++ b/templates/nav.html
@@ -15,6 +15,7 @@
         </script>
         <script src="../static/js/moment.min.js"></script>
         <script src="../static/js/foundation.min.js"></script>
+        <script src="../static/js/modernizr.js"></script>
 
 
  <style type="text/less">
