--- a/templates/shows.html
+++ b/templates/shows.html
@@ -2,14 +2,13 @@
 
 
 <form class="large-12 columns" action="/updateShow" method="post">
-    <input placeholder="Show Title" name="title">
+    <p><label for="title"></label></p><input placeholder="Show Title" id="title" name="title" title="Only use this form for updating shows you are already following.">
     <input placeholder="Season" name="season">
     <input placeholder="Episode #" name="episode">
     <input id="update" class="submit" type="submit" value="Update Show">
 
     <div class="medium-6-columns call">
-    <img class="medium-1 columns call" src="../static/images/exclamationRed.png">
-    <p class="large-11 columns call">Remember to only use this form to update shows you are already watching.</p>
+
 </div>
 
 </form>
