--- a/templates/newUserWelcome.html
+++ b/templates/newUserWelcome.html
@@ -1,7 +1,23 @@
-{%include 'nav.html'%}
+<html>
+<head>
+    <title>Welcome, Watchers</title>
+    <link href="../../static/styles.css" rel="stylesheet" >
+    <link href='http://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro' rel='stylesheet' type='text/css'>
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
+    <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
+    <script src="js/main.js"></script>
+</head>
+<body style="background-color: #0d0d0d; font-family: 'Walkway Semibold'; color:white;">
+        <nav>
+             <ul class="topnav">
+           <h1><a class="header" id="sw" href="/login">Watchers</a></h1>
+        </ul>
 
+        </nav>
 <h2 class="header">Welcome to the Watchers</h2>
 
-<p>Return to the <a href="/login">login screen</a> </p>
+<p>Return to the <a href="/login">login screen</a> to login and begin following shows.</p>
 
 {%include 'footer.html'%}
