--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -2,14 +2,16 @@
 <body>
 <div>
 {%for show in showdata|sort %}
-<form class="medium-6 columns feed" action="/comment" method="post">
+<form class="medium-6 columns feed" action="/friendData" method="post">
     <br>
     <p class="showContent" style="margin-right:500px">{{show[5]}}</p>
-    <h4 class="showContent" style="margin-top:10px;font-weight:bold;">{{show[0]}}</h4>
+    <input style="background-color:none; color:#2199e8;" id="friendDataHome"  type="submit" value="{{show[0]}}">
     <h5 class="showContent" style="margin-top:10px;font-weight:bold;">{{show[4]}}</h5>
     <h5 class="showContent" style="margin-top:10px;font-weight:bold;">"{{show[1]}}"</h5>
     <p class="showContent" style="margin-top:10px;font-weight:bold;">Season: {{show[2]}}</p>
     <p class="showContent" style="margin-top:10px;font-weight:bold;">Episode: {{show[3]}}</p>
+    <input name="friend" style="display:none;" value="{{show[0]}}">
+
 
 </form>
 </div>
