--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -97,6 +97,42 @@
               "Bones",
               "iZombie",
               "Grimm",
+              "Psych",
+              "The IT Crowd",
+              "Master of None",
+              "Quantum Leap",
+              "Blue Mountain State",
+              "Mad men",
+              "Sirens",
+              "Torchwood",
+              "Battlestar Galactica",
+              "Prison Break",
+              "Raising Hope",
+              "Malcom in the Middle",
+              "Buffy the Vampire Slayer",
+              "Full House",
+              "Fuller House",
+              "Everybody Loves Raymond",
+              "Dollhouse",
+              "House",
+              "Nurse Jackie",
+              "Farscape",
+              "Luther",
+              "The Bernie Mac Show",
+              "Friday Night Lights",
+              "Burn Notice",
+              "Hell on Wheels",
+              "American Horror Story",
+              "Alias",
+              "The Finder",
+              "Alphas",
+              "Hawaii Five-0",
+              "Longmire",
+              "The Glades",
+              "The Tudors",
+              "Bates Motel",
+              "Twin Peaks",
+              "CSI: NY",
               "Supergirl",
               "Castle"
             ];
@@ -220,7 +256,7 @@
     </style>
 
 
-    <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
+    <div id="jssor_1" style="position: relative; margin: 0 auto; margin-top: 10px; margin-bottom: 10px; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
         <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
             <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
