--- a/templates/showInfo.html
+++ b/templates/showInfo.html
@@ -57,7 +57,7 @@
     <input class="submit" type="submit" value="Delete Show">
 </form>
 
-<div class="large-4 columns">
+<div class="large-4 columns img-container">
         <img src="http://img.omdbapi.com/?i={{show[6]}}&h=600&apikey=e24fb313">
 </div>
 
