--- a/templates/showSearch.html
+++ b/templates/showSearch.html
@@ -141,10 +141,29 @@
             });
           });
         </script>
+
+        <script>
+
+            var date = new Date();
+
+            var t = date.toString();
+
+            var res = t.split(" ",4);
+
+            var dateTime = res.toString();
+
+            var theDate = dateTime.replace(/,/g , " ");
+
+            var formattedDate = document.getElementById("time").value = theDate;
+
+            console.log(theDate);
+        </script>
+
 <form class="large-12 columns addShow ui-widget" action="/parseJSON" method="post">
     <input placeholder="Show Title" class="addInput" id="tags" name="title">
     <input placeholder="Season" class="addInput" name="season">
     <input placeholder="Episode #" class="addInput" name="episode">
+    <input style="display:none;" id="time" name="time" type="text">
     <input id="searchSubmit" class="submit" type="submit" value="Add Show">
 </form>
 
@@ -254,6 +273,7 @@
         .jssora22l.jssora22ldn { background-position: -250px -31px; }
         .jssora22r.jssora22rdn { background-position: -310px -31px; }
     </style>
+
 
 
     <div id="jssor_1" style="position: relative; margin: 0 auto; margin-top: 10px; margin-bottom: 10px; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden; visibility: hidden;">
